--- a/dealer-add.html
+++ b/dealer-add.html
@@ -74,7 +74,7 @@
           <div class="left-header col-xxl-5 col-xl-6 col-lg-5 col-md-4 col-sm-3 p-0">
             <div> <a class="toggle-sidebar" href="#"> <i class="iconly-Category icli"> </i></a>
               <div class="d-flex align-items-center gap-2 ">
-                <h4 class="f-w-600">Welcome Alex</h4><img class="mt-0" src="../assets/images/hand.gif" alt="hand-gif">
+                <h4 class="f-w-600">Welcome Vipul Bhai</h4><img class="mt-0" src="../assets/images/hand.gif" alt="hand-gif">
               </div>
             </div>
             <div class="welcome-content d-xl-block d-none"><span class="text-truncate col-12">Here’s what’s happening with your store today. </span></div>
@@ -329,7 +329,7 @@
               <li class="profile-nav onhover-dropdown"> 
                 <div class="media profile-media"><img class="b-r-10" src="../assets/images/dashboard/profile.png" alt="">
                   <div class="media-body d-xxl-block d-none box-col-none">
-                    <div class="d-flex align-items-center gap-2"> <span>Alex Mora </span><i class="middle fa fa-angle-down"> </i></div>
+                    <div class="d-flex align-items-center gap-2"> <span>Vipul Bhai </span><i class="middle fa fa-angle-down"> </i></div>
                     <p class="mb-0 font-roboto">Admin</p>
                   </div>
                 </div>
@@ -391,8 +391,8 @@
                   <i class="fa fa-newspaper-o text-white" aria-hidden="true"></i>
                   <span class="lan-5">Design</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="add-Design.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Design</a></li>
-                    <li><a href="design-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Design List</a></li>
+                    <li><a href="#"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Design</a></li>
+                    <li><a href="#"><i class="fa fa-list text-white" aria-hidden="true"></i> Design List</a></li>
                   </ul>
                 </li>
                 
@@ -400,8 +400,8 @@
                   <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
                   <span class="lan-7">Mock Up</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="add-Mock-Up.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Mock Up</a></li>
-                    <li><a href="Mock-Up-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Mock Up List</a></li>
+                    <li><a href="#"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Mock Up</a></li>
+                    <li><a href="#"><i class="fa fa-list text-white" aria-hidden="true"></i> Mock Up List</a></li>
                   </ul>
                 </li>
 
@@ -422,7 +422,7 @@
                   <i class="fa fa-users text-white" aria-hidden="true"></i>
                   <span class="lan-10">Team</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="team-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i>  Team List</a></li>
+                    <li><a href="#"><i class="fa fa-list text-white" aria-hidden="true"></i>  Team List</a></li>
                     <!-- <li><a href="team-member-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Team List</a></li> -->
                   </ul>
                 </li>
@@ -560,8 +560,8 @@
                                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                                   </div>
                                   <div class="col-12 text-center">
-                                    <button class="btn btn-primary">Save</i></button>
-                                    <button class="btn btn-danger">cancel</i></button>
+                                    <button class="btn btn-primary" type="submit">Save</button>
+                                    <button class="btn btn-dark" type="reset">Cancel</button>
                                   </div>
                                 </form>
                               </div>
