--- a/inquiry-list.html
+++ b/inquiry-list.html
@@ -391,8 +391,8 @@
                   <i class="fa fa-newspaper-o text-white" aria-hidden="true"></i>
                   <span class="lan-5">Design</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="#"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Design</a></li>
-                    <li><a href="#"><i class="fa fa-list text-white" aria-hidden="true"></i> Design List</a></li>
+                    <li><a href="design-add.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Design</a></li>
+                    <li><a href="design-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Design List</a></li>
                   </ul>
                 </li>
                 
@@ -400,32 +400,26 @@
                   <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
                   <span class="lan-7">Mock Up</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="#"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Mock Up</a></li>
-                    <li><a href="#"><i class="fa fa-list text-white" aria-hidden="true"></i> Mock Up List</a></li>
+                    <li><a href="mock-up-add.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Mock Up</a></li>
+                    <li><a href="mock-up-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Mock Up List</a></li>
                   </ul>
                 </li>
 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                    <i class="fa fa-users text-white" aria-hidden="true"></i>
-                    <span class="lan-8">Dealer</span></a>
-                  <ul class="sidebar-submenu">
-                    <li><a href="dealer-add.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Dealer</a></li>
-                    <li><a href="dealer-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Dealer List</a></li>
-                  </ul>
-                </li>
+                  <i class="fa fa-users text-white" aria-hidden="true"></i>
+                  <span class="lan-8">Dealer</span></a>
+                <ul class="sidebar-submenu">
+                  <li><a href="dealer-add.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Dealer</a></li>
+                  <li><a href="dealer-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Dealer List</a></li>
+<li><a href="update-by-dealer-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Design by Dealer List</a></li>
+                </ul>
+              </li>
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="inquiry-list.html">
                   <i class="fa fa-tachometer text-white" aria-hidden="true"></i>
                   <span class="lan-2">Inquiry</span></a>
                 </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-users text-white" aria-hidden="true"></i>
-                  <span class="lan-10">Team</span></a>
-                  <ul class="sidebar-submenu">
-                    <li><a href="#"><i class="fa fa-list text-white" aria-hidden="true"></i>  Team List</a></li>
-                    <!-- <li><a href="team-member-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Team List</a></li> -->
-                  </ul>
-                </li>
+              
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
           </nav>
