--- a/update-design.html
+++ b/update-design.html
@@ -1,4 +1,4 @@
-﻿
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -86,7 +86,7 @@
               <li class="profile-nav onhover-dropdown"> 
                 <div class="media profile-media"><img class="b-r-10" src="/assets/images/dashboard/profile.png" alt="">
                   <div class="media-body d-xxl-block d-none box-col-none">
-                    <div class="d-flex align-items-center gap-2"> <span>Vipul Bhai </span><i class="middle fa fa-angle-down"> </i></div>
+                    <div class="d-flex align-items-center gap-2"> <span>Vipul Bhai Mora </span><i class="middle fa fa-angle-down"> </i></div>
                     <p class="mb-0 font-roboto">Admin</p>
                   </div>
                 </div>
@@ -181,87 +181,189 @@
         </div>
         <!-- Page Sidebar Ends-->
         <div class="page-body">
-          <div class="container-fluid">
-            <div class="page-title">
-              <div class="row">
-                <div class="col-6">
-                  <h4>Default</h4>
-                </div>
-                <div class="col-6"> 
-                  <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">                                       
-                        <svg class="stroke-icon">
-                          <use href="/assets/svg/icon-sprite.svg#stroke-home"></use>
-                        </svg></a></li>
-                    <li class="breadcrumb-item">Dashboard</li>
-                    <li class="breadcrumb-item active">Default</li>
-                  </ol>
+            <div class="container-fluid">
+              <div class="page-title">
+                <div class="row">
+                  <div class="col-6">
+                    <h4>Update Design List</h4>
+                  </div>
+                  <div class="col-6">
+                    <ol class="breadcrumb">
+                      <li class="breadcrumb-item"><a href="index.html">                                       
+                          <svg class="stroke-icon">
+                            <use href="/assets/svg/icon-sprite.svg#stroke-home"></use>
+                          </svg></a></li>
+                      <li class="breadcrumb-item active">Update Design List</li>
+                    </ol>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <!-- Container-fluid starts-->
-          <div class="container-fluid"> 
-            <div class="row size-column">
-              <div class="col-xl-8 col-md-12 box-col-12">
-                <div class="card">
-                  <div class="card-header sales-chart card-no-border">
-                    <h4>Revenue Growth</h4>
-                    <div class="sales-chart-dropdown"> 
-                      <ul class="balance-data">
-                        <li> <span class="circle bg-warning"> </span><span class="ms-1 f-w-400">Marketing Sale </span></li>
-                        <li>  <span class="circle bg-primary"> </span><span class="ms-1 f-w-400">Online Sale</span></li>
-                      </ul>
-                      <div class="sales-chart-dropdown-select">
-                        <div class="card-header-right-icon online-store"> 
-                          <div class="dropdown"> 
-                            <button class="btn dropdown-toggle dropdown-toggle-store" id="dropdownMenuButtonToggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">This Year</button>
-                            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButtonToggle"><span class="dropdown-item">Last Month</span><span class="dropdown-item">Last Week</span><span class="dropdown-item">Today   </span></div>
+            <!-- Container-fluid starts-->
+            <div class="container-fluid">
+              <div class="card-wrapper border rounded-3 light-card checkbox-checked mt-3">
+                <div class="card-body">
+              <div class="row mb-2">
+                <div class="page-title" style="padding: 20px 46px;">
+                  <div class="row">
+                    <div class="col-6">
+                      <h4>Select Mock Up</h4>
+                    </div>
+                  </div>
+                </div>
+                <!-- Daily Entry Table Start -->
+                <div class="col-sm-12">
+                  <div class="card">
+                    <div class="card-block row">
+                      <div class="col-sm-12 col-lg-12 col-xl-12">
+                        <div class="table-responsive">
+                          <table class="table table-dashed">
+                            <thead>
+                              <tr class="bg-light">
+                                <th scope="col" class="text-center">Image</th>
+                                <th scope="col" class="text-center">Mock Up Name</th>
+                                <th scope="col" class="text-center">Action</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <th scope="row" class="text-center table-data"><img src="./assets/images/demo 2.jpg" width="50px" height="50px" alt=""></th>
+                                <td class="text-center table-data">Spencera</td>
+                                <td class="text-center col-fix table-data"> 
+                                  <ul class="action d-flex justify-content-center"> 
+                                    <li class="delete"><a href="#" class="bg-danger p-2 rounded"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
+                                  </ul>
+                                </td>
+                              </tr>
+                            
+                            </tbody>
+                          </table>
+                        </div>
+                        <div class="row justify-content-between gx-0 mx-2">
+                          <div class="col-lg-4 col-md-4 col-sm-12">
+                            <label class="mt-2">Select 
+                            <select id="rows" name="rows" class="p-2 border mx-2">
+                              <option value="10">10</option>
+                              <option value="20">20</option>
+                              <option value="30">30</option>
+                              <option value="40">40</option>
+                            </select>
+                            Entries </label>
+                          </div>
+                          <div class="col-lg-3 col-md-4 col-sm-12  d-flex justify-content-end" id="paginatgion">
+                            <nav aria-label="Page navigation example" class="mt-2">
+                              <ul class="pagination">
+                                <li class="page-item">
+                                  <a class="page-link" href="#" aria-label="Previous">
+                                    <span aria-hidden="true" class="text-dark">&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                  </a>  
+                                </li>
+                                <li class="page-item"><a class="page-link text-dark" href="#">1</a></li>
+                                <li class="page-item"><a class="page-link text-dark" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link text-dark" href="#">3</a></li>
+                                <li class="page-item">
+                                  <a class="page-link" href="#" aria-label="Next">
+                                    <span aria-hidden="true" class="text-dark">&raquo;</span>
+                                    <span class="sr-only" >Next</span>
+                                  </a>
+                                </li>
+                              </ul>
+                            </nav>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div class="card-body pt-0"> 
-                    <div class="row"> 
-                      <div class="col-xxl-8 col-xl-12">
-                        <div class="revenuegrowth">
-                          <div class="revenuegrowth-chart" id="revenuegrowth"></div>
+                </div>
+                <!-- Daily Entry Table Start -->
+            </div>
+          </div>
+          </div>
+            </div>
+
+            <div class="container-fluid">
+              <div class="card-wrapper border rounded-3 light-card checkbox-checked mt-3">
+                <div class="card-body">
+              <div class="row mb-3">
+                <div class="page-title" style="padding: 20px 46px;">
+                  <div class="row">
+                    <div class="col-6">
+                      <h4>New Mock Up</h4>
+                    </div>
+                  </div>
+                </div>
+                <!-- Daily Entry Table Start -->
+                <div class="col-sm-12">
+                  <div class="card">
+                    <div class="card-block row">
+                      <div class="col-sm-12 col-lg-12 col-xl-12">
+                        <div class="table-responsive">
+                          <table class="table table-dashed">
+                            <thead>
+                              <tr class="bg-light">
+                                <th scope="col" class="text-center"><input class="form-check-input border-info" id="flexCheckDefault" type="checkbox" value=""></th>
+                                <th scope="col" class="text-center">Image</th>
+                                <th scope="col" class="text-center">Mock Up Name</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <td class="text-center table-data"><input class="form-check-input border-info" id="flexCheckDefault" type="checkbox" value=""></td>
+                                <th scope="row" class="text-center table-data"><img src="./assets/images/demo 2.jpg" width="50px" height="50px" alt=""></th>
+                                <td class="text-center col-fix table-data">xys</td>
+                              </tr>
+                              <tr>
+                                <td class="text-center table-data"><input class="form-check-input border-info" id="flexCheckDefault" type="checkbox" value=""></td>
+                                <th scope="row" class="text-center table-data"><img src="./assets/images/demo 2.jpg" width="50px" height="50px" alt=""></th>
+                                <td class="text-center col-fix table-data">xys</td>
+                              </tr>
+                            </tbody>
+                          </table>
                         </div>
-                      </div>
-                      <div class="col-xxl-4 col-xl-4 d-xxl-block d-none ">
-                        <div class="revenuegrowth-details"> 
-                          <div class="growth-details"><span class="f-light f-12  text-uppercase">Total Sales</span>
-                            <h4 class="f-w-500 mb-2">$56.265.08 </h4>
-                            <div class="d-flex justify-content-center align-items-center gap-2 mb-4">
-                              <p class="mb-0 f-w-500 f-12">Compared to  </p><span class="f-light f-12 f-w-500 ">(+40.15% than)</span>
-                              <p class="mb-0 f-w-500 f-12">last year </p>
-                            </div>
+                        <div class="row justify-content-between gx-0 mx-2">
+                          <div class="col-lg-4 col-md-4 col-sm-12">
+                            <label class="mt-2">Select 
+                            <select id="rows" name="rows" class="p-2 border mx-2">
+                              <option value="10">10</option>
+                              <option value="20">20</option>
+                              <option value="30">30</option>
+                              <option value="40">40</option>
+                            </select>
+                            Entries </label>
                           </div>
-                          <div class="growth-details"><span class="f-light f-12  text-uppercase">Total Purchase </span>
-                            <h4 class="f-w-500 mb-2">$42,256.26  </h4>
-                            <div class="d-flex justify-content-center align-items-center gap-2 mb-4">
-                              <p class="mb-0 f-w-500 f-12">Compared to </p><span class="txt-secondary f-12 f-w-500">(-20.25% than) </span>
-                              <p class="mb-0 f-w-500 f-12">last year  </p>
-                            </div>
-                          </div>
-                          <div class="growth-details"> <span class="f-light f-12  text-uppercase">Total Returns</span>
-                            <h4 class="f-w-500 mb-2">$5,215.62  </h4>
-                            <div class="d-flex justify-content-center align-items-center gap-2">
-                              <p class="mb-0 f-w-500 f-12">Compared to </p><span class=" f-w-500 f-light f-12">(+18.15% than)  </span>
-                              <p class="mb-0 f-w-500 f-12">last year </p>
-                            </div>
+                          <div class="col-lg-3 col-md-4 col-sm-12  d-flex justify-content-end" id="paginatgion">
+                            <nav aria-label="Page navigation example" class="mt-2">
+                              <ul class="pagination">
+                                <li class="page-item">
+                                  <a class="page-link" href="#" aria-label="Previous">
+                                    <span aria-hidden="true" class="text-dark">&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                  </a>  
+                                </li>
+                                <li class="page-item"><a class="page-link text-dark" href="#">1</a></li>
+                                <li class="page-item"><a class="page-link text-dark" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link text-dark" href="#">3</a></li>
+                                <li class="page-item">
+                                  <a class="page-link" href="#" aria-label="Next">
+                                    <span aria-hidden="true" class="text-dark">&raquo;</span>
+                                    <span class="sr-only" >Next</span>
+                                  </a>
+                                </li>
+                              </ul>
+                            </nav>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-              </div>
+                <!-- Daily Entry Table Start -->
             </div>
           </div>
-          <!-- Container-fluid Ends-->
-        </div>
+          </div>
+            </div>
+          </div>
         <!-- footer start-->
         <footer class="footer">
           <div class="container-fluid"> 
