all changes done

--- a/dealer-list.html
+++ b/dealer-list.html
@@ -9,7 +9,7 @@
 <meta name="author" content="pixelstrap">
 <link rel="icon" href="./assets/images/logo/Unique_it.jpg" type="image/x-icon">
 <link rel="shortcut icon" href="./assets/images/logo/Unique_it.jpg" type="image/x-icon">
-<title>Unique IT Solution</title>
+<title>Wholesaler</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -481,12 +481,11 @@
                           <label class="form-label" for="customState-wizard">District</label>
                                     <select class="form-select" id="customState-wizard" required="">
                                       <option selected="" disabled="" value="">Select District</option>
-                                      <option>Africa </option>
-                                      <option>India</option>
-                                      <option>Indonesia </option>
-                                      <option>Netherlands</option>
-                                      <option>U.K </option>
-                                      <option>U.S</option>
+                                      <option>Rajkot </option>
+                                      <option>Jamnager</option>
+                                      <option>Surat </option>
+                                      <option>Junagadh</option>
+                                      <option>Morbi </option>
                                     </select>
                                     <div class="invalid-feedback">Please select a valid state.</div>
                         </div>    
