--- a/mock-up-list.html
+++ b/mock-up-list.html
@@ -9,7 +9,7 @@
 <meta name="author" content="pixelstrap">
 <link rel="icon" href="./assets/images/logo/Unique_it.jpg" type="image/x-icon">
 <link rel="shortcut icon" href="./assets/images/logo/Unique_it.jpg" type="image/x-icon">
-<title>Unique IT Solution</title>
+<title>Wholesaler</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -264,6 +264,7 @@
                                   <thead>
                                     <tr class="bg-light text-dark">
                                       <th class="text-center">No.</th>
+                                      <th class="text-center">Name</th>
                                       <th class="text-center">Image</th>
                                       <th class="text-center">Design</th> 
                                       <th class="text-center">Action</th>
@@ -272,6 +273,7 @@
                                   <tbody>
                                     <tr>
                                       <td class="text-center table-data">1</td>
+                                      <td class="text-center table-data">Mockup 1</td>
                                       <td class="text-center table-data"><img src="./assets/images/demo img.avif" width="70px" height="70px" alt=""></td>
                                       <td class="text-center table-data">6</td>
                                       <td class="text-center col-fix table-data"> 
@@ -284,6 +286,7 @@
                                     </tr>
                                     <tr>
                                       <td class="text-center table-data">2</td>
+                                      <td class="text-center table-data">Bathroom Mockup</td>
                                       <td class="text-center table-data"><img src="./assets/images/demo 2.jpg" width="70px" height="70px" alt=""></td>
                                       <td class="text-center table-data">6</td>
                                       <td class="text-center col-fix table-data"> 
