--- a/srock-update.html
+++ b/srock-update.html
@@ -9,7 +9,7 @@
 <meta name="author" content="pixelstrap">
 <link rel="icon" href="./assets/images/logo/Unique_it.jpg" type="image/x-icon">
 <link rel="shortcut icon" href="./assets/images/logo/Unique_it.jpg" type="image/x-icon">
-<title>Unique IT Solution</title>
+<title>Wholesaler</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -465,12 +465,12 @@
                         <div class="tab-content mt-3" id="myTabContent">
                             <div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
                                 <div class="col-sm-12">
-                                    <label class="form-label" for="customState-wizard">Design Number </label>
+                                    <label class="form-label" for="customState-wizard">Design Name </label>
                                     <select class="form-select" id="customState-wizard" required="">
-                                      <option selected="" disabled="" value="">Select Design Number </option>
-                                      <option>123 </option>
-                                      <option>4125</option>
-                                      <option>132 </option>
+                                      <option selected="" disabled="" value="">Select Design Name </option>
+                                      <option>Snow White </option>
+                                      <option>Black Plain</option>
+                                      <option>White PLain </option>
                                     </select>
                                     <div class="invalid-feedback">Please select a valid state.</div>
                                     
@@ -486,12 +486,12 @@
                             </div>
                             <div class="tab-pane fade active show" id="profile" role="tabpanel" aria-labelledby="profile-tabs">
                                 <div class="col-sm-12">
-                                    <label class="form-label" for="customState-wizard">Design Number </label>
+                                    <label class="form-label" for="customState-wizard">Design name </label>
                                     <select class="form-select" id="customState-wizard" required="">
-                                      <option selected="" disabled="" value="">Select Design Number </option>
-                                      <option>123 </option>
-                                      <option>4125</option>
-                                      <option>132 </option>
+                                      <option selected="" disabled="" value="">Select Design Name </option>
+                                      <option>Snow White </option>
+                                      <option>Black Plain</option>
+                                      <option>White PLain </option>
                                     </select>
                                     <div class="invalid-feedback">Please select a valid state.</div>
                                     
