--- a/stock-list.html
+++ b/stock-list.html
@@ -9,7 +9,7 @@
 <meta name="author" content="pixelstrap">
 <link rel="icon" href="./assets/images/logo/Unique_it.jpg" type="image/x-icon">
 <link rel="shortcut icon" href="./assets/images/logo/Unique_it.jpg" type="image/x-icon">
-<title>Unique IT Solution</title>
+<title>Wholesaler</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -462,7 +462,7 @@
                           <thead>
                             <tr class="bg-light">
                               <th scope="col" class="text-center">No</th>
-                              <th scope="col" class="text-center">Design Number<i class="fa fa-sort opacity-25" aria-hidden="true"></i></th>
+                              <th scope="col" class="text-center">Design Name<i class="fa fa-sort opacity-25" aria-hidden="true"></i></th>
                               <th scope="col" class="text-center">Boxes <i class="fa fa-sort opacity-25" aria-hidden="true"></i></th>
                               <th scope="col" class="text-center">Action</th>
                             </tr>
@@ -470,8 +470,8 @@
                           <tbody>
                             <tr>
                               <th scope="row" class="text-center table-data">1</th>
-                              <td class="text-center table-data">987456</td>
-                              <td class="text-center table-data">Spencera</td>
+                              <td class="text-center table-data">Snow White</td>
+                              <td class="text-center table-data">20</td>
                               <td class="text-center col-fix table-data"> 
                                 <ul class="action d-flex justify-content-center"> 
                                   <li class="edit"> <a href="srock-update.html" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
