--- a/update-by-dealer-list.html
+++ b/update-by-dealer-list.html
@@ -10,7 +10,7 @@
     <meta name="author" content="pixelstrap">
     <link rel="icon" href="./assets/images/logo/Unique_it.jpg" type="image/x-icon">
     <link rel="shortcut icon" href="./assets/images/logo/Unique_it.jpg" type="image/x-icon">
-    <title>Unique IT Solution</title>
+    <title>Wholesaler</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -227,14 +227,7 @@
                     <div class="card-body basic-wizard important-validation">
                       <div id="msform">
                         <form class="stepper-one row needs-validation custom-input" novalidate="">
-                          <div class="col-md-4">
-                              <label class="form-label" for="zodic-sign">Manufacturer Name</label>
-                              <input class="form-control w-100 rounded border"  placeholder="Please Enter Manufacturer Name">
-                            </div>
-                            <div class="col-md-4">
-                                <label class="form-label" for="zodic-sign">Wholesaler Name</label>
-                                <input class="form-control w-100 rounded border"  placeholder="Please Enter Wholesaler Name">
-                              </div>
+                        
                               <div class="col-md-4">
                                 <label class="form-label" for="zodic-sign">Dealer Name</label>
                                 <input class="form-control w-100 rounded border"  placeholder="Please Enter Dealer Name">
@@ -262,8 +255,7 @@
                               <tr class="bg-light">
                                 <th scope="col" class="text-center">No</th>
                                 <th scope="col" class="text-center">Dealer Name <i class="fa fa-sort opacity-25" aria-hidden="true"></i></th>
-                                <th scope="col" class="text-center">Manufacturer Name <i class="fa fa-sort opacity-25" aria-hidden="true"></i></th>
-                                <th scope="col" class="text-center">Wholesaler Name <i class="fa fa-sort opacity-25" aria-hidden="true"></i></th>
+                                <th scope="col" class="text-center">Total Designs <i class="fa fa-sort opacity-25" aria-hidden="true"></i></th>
                                 <th scope="col" class="text-center">Action</th>
                               </tr>
                             </thead>
@@ -271,8 +263,7 @@
                               <tr>
                                 <th scope="row" class="text-center table-data">1</th>
                                 <td class="text-center table-data">Spencera</td>
-                                <td class="text-center table-data">Spencera</td>
-                                <td class="text-center table-data">GSTN123</td>
+                                <td class="text-center table-data">25</td>
                                 <td class="text-center col-fix table-data"> 
                                   <ul class="action d-flex justify-content-center"> 
                                     <li class="edit"> <a href="update-design.html" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
