--- a/inquiry-list.html
+++ b/inquiry-list.html
@@ -9,7 +9,7 @@
 <meta name="author" content="pixelstrap">
 <link rel="icon" href="./assets/images/logo/Unique_it.jpg" type="image/x-icon">
 <link rel="shortcut icon" href="./assets/images/logo/Unique_it.jpg" type="image/x-icon">
-<title>Unique IT Solution</title>
+<title>Wholesaler</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -473,8 +473,8 @@
                       <div id="msform p-3">
                         <form class="stepper-one row needs-validation custom-input" novalidate="">
                           <div class="col-lg-4 col-md-12 col-sm-12">
-                            <label class="form-label" for="number">Design Number</label>
-                            <input class="form-control digits w-100" type="number" placeholder="Enter your Design Number" id="number">
+                            <label class="form-label" for="number">Design Name</label>
+                            <input class="form-control digits w-100" type="number" placeholder="Enter your Design Name" id="number">
                           </div>  
                           <div class="col-lg-4 col-md-12 col-sm-12">
                             <label class="form-label" for="number">Size</label>
@@ -503,8 +503,7 @@
                             <th class="text-center">No.</th>
                             <th class="text-center">PinCode</th>
                             <th class="text-center">Dealer Code</th>
-                            <th class="text-center">Design Number</th>    
-                            <th class="text-center">Name</th>
+                            <th class="text-center">Design Name</th>
                             <th class="text-center">Number</th>
                             <th class="text-center">Size</th>
                             <th class="text-center">Action</th>
@@ -515,8 +514,7 @@
                             <td class="text-center table-data">1</td>
                             <td class="text-center table-data">326 325</td>
                             <td class="text-center table-data">9635 9635</td>
-                            <td class="text-center table-data">96396</td>
-                            <td class="text-center table-data">Lorem</td>
+                            <td class="text-center table-data">Snow White</td>
                             <td class="text-center table-data">9639639639</td>
                             <td class="text-center table-data"> 100 Sq. feet</td>
                             <td class="d-flex justify-content-center"> 
@@ -529,8 +527,7 @@
                             <td class="text-center table-data">2</td>
                             <td class="text-center table-data">326 325</td>
                             <td class="text-center table-data">9635 9635</td>
-                            <td class="text-center table-data">96396</td>
-                            <td class="text-center table-data">Lorem</td>
+                            <td class="text-center table-data">Black Plain</td>
                             <td class="text-center table-data">9639639639</td>
                             <td class="text-center table-data">1200 Sq. feet</td>
                             <td class="d-flex justify-content-center"> 
