--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@
                   <ul class="sidebar-submenu">
                     <li><a href="mock-up-add.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Mock Up</a></li>
                     <li><a href="mock-up-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Mock Up List</a></li>
+                    <li><a href="Loginofmanufacturer.html"><i class="fa fa-list text-white" aria-hidden="true"></i> select MockUps</a></li>
+                 
                   </ul>
                 </li>
 
@@ -308,7 +310,7 @@
     <!-- Plugins JS Ends-->
     <!-- Theme js-->
     <script src="/assets/js/script.js"></script> 
-    <!-- <script src="/assets/js/theme-customizer/customizer.js"></script> -->
+    <!--  -->
   <!-- Code injected by live-server -->
 <script>
 	// <![CDATA[  <-- For SVG support
