--- a/srock-update.html
+++ b/srock-update.html
@@ -402,7 +402,7 @@
                   <ul class="sidebar-submenu">
                     <li><a href="mock-up-add.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Mock Up</a></li>
                     <li><a href="mock-up-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Mock Up List</a></li>
-                  </ul>
+                    <li><a href="Loginofmanufacturer.html"><i class="fa fa-list text-white" aria-hidden="true"></i> select MockUps</a></li>  </ul>
                 </li>
 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
@@ -419,11 +419,14 @@
                   <i class="fa fa-tachometer text-white" aria-hidden="true"></i>
                   <span class="lan-2">Inquiry</span></a>
                 </li>
-<li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="stock-list.html">
-                  <i class="fa fa-tachometer text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Stock</span></a>
-                </li>
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+                  <i class="fa fa-users text-white" aria-hidden="true"></i>
+                  <span class="lan-8">Stock</span></a>
+                  <ul class="sidebar-submenu">
+                    <li><a href="stock-list.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Stock List</a></li>
+                    <li><a href="srock-update.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Stock Update</a></li>
+                  </ul>
+              </li>
               
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
@@ -464,6 +467,22 @@
                         </ul>
                         <div class="tab-content mt-3" id="myTabContent">
                             <div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
+                              <div class="col-sm-12">
+                                <label class="form-label" for="customState-wizard">Manufacturer </label>
+                                <select class="form-select" id="customState-wizard" required="">
+                                  <option selected="" disabled="" value="">Select Manufacturer Name </option>
+                                  <option>Simpolo </option>
+                                  <option>Spensera</option>
+                                </select>
+                              </div>
+                              <div class="col-sm-12">
+                                <label class="form-label" for="customState-wizard">Brand </label>
+                                <select class="form-select" id="customState-wizard" required="">
+                                  <option selected="" disabled="" value="">Select Brand Name </option>
+                                  <option>Diccasa </option>
+                                  <option>Slove</option>
+                                </select>
+                              </div>
                                 <div class="col-sm-12">
                                     <label class="form-label" for="customState-wizard">Design Name </label>
                                     <select class="form-select" id="customState-wizard" required="">
@@ -485,6 +504,22 @@
                                   </div>
                             </div>
                             <div class="tab-pane fade active show" id="profile" role="tabpanel" aria-labelledby="profile-tabs">
+                              <div class="col-sm-12">
+                                <label class="form-label" for="customState-wizard">Manufacturer </label>
+                                <select class="form-select" id="customState-wizard" required="">
+                                  <option selected="" disabled="" value="">Select Manufacturer Name </option>
+                                  <option>Simpolo </option>
+                                  <option>Spensera</option>
+                                </select>
+                              </div>
+                              <div class="col-sm-12">
+                                <label class="form-label" for="customState-wizard">Brand </label>
+                                <select class="form-select" id="customState-wizard" required="">
+                                  <option selected="" disabled="" value="">Select Brand Name </option>
+                                  <option>Diccasa </option>
+                                  <option>Slove</option>
+                                </select>
+                              </div>
                                 <div class="col-sm-12">
                                     <label class="form-label" for="customState-wizard">Design name </label>
                                     <select class="form-select" id="customState-wizard" required="">
