--- a/stock-list.html
+++ b/stock-list.html
@@ -402,7 +402,7 @@
                   <ul class="sidebar-submenu">
                     <li><a href="mock-up-add.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Mock Up</a></li>
                     <li><a href="mock-up-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Mock Up List</a></li>
-                  </ul>
+                    <li><a href="Loginofmanufacturer.html"><i class="fa fa-list text-white" aria-hidden="true"></i> select MockUps</a></li>    </ul>
                 </li>
 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
@@ -419,11 +419,20 @@
                   <i class="fa fa-tachometer text-white" aria-hidden="true"></i>
                   <span class="lan-2">Inquiry</span></a>
                 </li>
-<li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+                  <i class="fa fa-users text-white" aria-hidden="true"></i>
+                  <span class="lan-8">Stock</span></a>
+                  <ul class="sidebar-submenu">
+                    <li><a href="stock-list.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Stock List</a></li>
+                    <li><a href="srock-update.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Stock Update</a></li>
+                  </ul>
+              </li>
+               
+<!-- <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="stock-list.html">
                   <i class="fa fa-tachometer text-white" aria-hidden="true"></i>
                   <span class="lan-2">Stock</span></a>
-                </li>
+                </li> -->
               
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
