--- a/update-design.html
+++ b/update-design.html
@@ -157,7 +157,7 @@
                   <ul class="sidebar-submenu">
                     <li><a href="mock-up-add.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Mock Up</a></li>
                     <li><a href="mock-up-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Mock Up List</a></li>
-                  </ul>
+                    <li><a href="Loginofmanufacturer.html"><i class="fa fa-list text-white" aria-hidden="true"></i> select MockUps</a></li>  </ul>
                 </li>
 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
@@ -293,10 +293,14 @@
               <div class="row mb-3">
                 <div class="page-title" style="padding: 20px 46px;">
                   <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-md-10">
                       <h4>New Mock Up</h4>
                     </div>
+                    <div class="col-12 col-md-2 d-flex justify-content-md-end align-items-center">
+                      <button class="btn btn-primary">Add</button>
+                    </div>
                   </div>
+                  
                 </div>
                 <!-- Daily Entry Table Start -->
                 <div class="col-sm-12">
@@ -409,7 +413,7 @@
     <!-- Plugins JS Ends-->
     <!-- Theme js-->
     <script src="/assets/js/script.js"></script> 
-    <!-- <script src="/assets/js/theme-customizer/customizer.js"></script> -->
+    <!--  -->
   <!-- Code injected by live-server -->
 <script>
 	// <![CDATA[  <-- For SVG support
