--- a/update-by-dealer-list.html
+++ b/update-by-dealer-list.html
@@ -157,7 +157,7 @@
                   <ul class="sidebar-submenu">
                     <li><a href="mock-up-add.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add Mock Up</a></li>
                     <li><a href="mock-up-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Mock Up List</a></li>
-                  </ul>
+                    <li><a href="Loginofmanufacturer.html"><i class="fa fa-list text-white" aria-hidden="true"></i> select MockUps</a></li>    </ul>
                 </li>
 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
@@ -358,7 +358,7 @@
     <!-- Theme js-->
     <script src="/assets/js/script.js"></script> 
     <script src="./assets/js/filter.js"></script>
-    <!-- <script src="/assets/js/theme-customizer/customizer.js"></script> -->
+    <!--  -->
   <!-- Code injected by live-server -->
 <script>
 	// <![CDATA[  <-- For SVG support
