done all changes

--- a/index.html
+++ b/index.html
@@ -172,6 +172,17 @@
 <li><a href="update-by-dealer-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Design by Dealer List</a></li>
                 </ul>
               </li>
+              <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+                <i class="fa fa-file-text text-white" aria-hidden="true"></i>
+                <span class="lan-10">Blog</span></a>
+              <ul class="sidebar-submenu">
+                <li><a href="add-blog.html"><i class="fa fa-plus-square text-white" aria-hidden="true"></i> Add
+                    Blog</a></li>
+                <li><a href="blog-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Blog List</a>
+                </li>
+                <!-- <li><a href="team-member-list.html"><i class="fa fa-list text-white" aria-hidden="true"></i> Team List</a></li> -->
+              </ul>
+            </li>
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="inquiry-list.html">
                   <i class="fa fa-tachometer text-white" aria-hidden="true"></i>
