--- a/mock-up-add.html
+++ b/mock-up-add.html
@@ -244,9 +244,19 @@
                                     <div class="valid-feedback">Looks good!</div>
                                   </div>
                                   <div class="col-12"> 
+                                    <label class="form-label" for="formFile1">Sequence</label>
+                                    <input class="form-control" id="customUrl" type="URL" placeholder="Sequence" required="">
+                                    <div class="invalid-feedback">Invalid form file selected</div>
+                                  </div>
+                                  <div class="col-6"> 
                                     <label class="form-label" for="formFile1">Choose MockUP Image<span class="txt-danger">*</span></label>
                                     <input class="form-control" id="formFile1" type="file" aria-label="file example" required="">
                                     <div class="invalid-feedback">Invalid form file selected</div>
+                                  </div>
+                                  <div class="col-6">
+                                    <label class="form-label" for="customUrl">Alt Tag</label>
+                                    <input class="form-control" id="customUrl" type="URL" placeholder="Alt Tag" required="">
+                                    <div class="valid-feedback">Looks good!</div>
                                   </div>
                                   <div class="col-12">
                                     <div class="media">
@@ -259,11 +269,16 @@
                                   
                                     <div class="invalid-feedback">Please select a valid state.</div>
                                   </div>
-
-                                  <div class="col-12"> 
+</div>
+                                  <div class="col-6"> 
                                     <label class="form-label" for="formFile1">Choose 360° Image</label>
                                     <input class="form-control" id="formFile1" type="file" aria-label="file example" required="">
                                     <div class="invalid-feedback">Invalid form file selected</div>
+                                  </div>
+                                  <div class="col-6">
+                                    <label class="form-label" for="customUrl">Alt Tag</label>
+                                    <input class="form-control" id="customUrl" type="URL" placeholder="Alt Tag" required="">
+                                    <div class="valid-feedback">Looks good!</div>
                                   </div>
                                   <style>
                                     .ck-blurred{
